# QuantboxTestTask

./: CMakeLists.txt  Define.h  MyCheck.txt  output.txt
LinkedList/: CMakeLists.txt  LinkedList.c  LinkedList.h
Logger/: CMakeLists.txt  Logger.c  Logger.h
Set/: CMakeLists.txt  Set.c  Set.h
Stock/: CMakeLists.txt  Market.c  Market.h  Stock.c  Stock.h
StockSim/: CMakeLists.txt  StockSim.c  StockSim.cpp  StockSim.h
Threads/: CMakeLists.txt  Threads.c  Threads.h
